[gd_scene load_steps=7 format=3 uid="uid://beo4v80ksdv4p"]

[ext_resource type="PackedScene" uid="uid://bixwcj5yj87vd" path="res://src/scenes/ui/counted_item_ui.tscn" id="1_b08pw"]
[ext_resource type="Script" path="res://src/scenes/ui/misc/upgrade_ask.gd" id="1_xkvn2"]
[ext_resource type="Texture2D" uid="uid://dr25j70rc70vd" path="res://assets/sprites/tilesets/tiles.png" id="2_hjq8c"]
[ext_resource type="Script" path="res://src/resources/counted_item.gd" id="3_sihen"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kfix5"]
atlas = ExtResource("2_hjq8c")
region = Rect2(0, 0, 16, 16)

[sub_resource type="Resource" id="Resource_1i31o"]
script = ExtResource("3_sihen")
amount = 2

[node name="UpgradeAsk" type="Control"]
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xkvn2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CountedItemUI" parent="VBoxContainer/HBoxContainer" instance=ExtResource("1_b08pw")]
layout_mode = 2
texture = SubResource("AtlasTexture_kfix5")
counted_item = SubResource("Resource_1i31o")

[node name="UpgradeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Upgrade
"

[connection signal="pressed" from="VBoxContainer/UpgradeButton" to="." method="_on_upgrade_button_pressed"]
